[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>My App</title>
+        <title>IMAD App</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <link rel="shortcut icon" href="#">
@@ -24,8 +24,8 @@
         
         <div class="page-home">
             <section>
-                <h1 class="page-title">Exam Kit</h1>
-                <p>Get ready for your next exam</p>
+                <h1 class="page-title">My App</h1>
+                <p></p>
                 <a class="fork-tag" href="http://www.imad.tech/">IMAD</a>
             </section>
         
