[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -32,7 +32,7 @@
             <section>
                 
                 <article>
-                    <h4>Subjects</h4>
+                    <h4>News</h4>
                 </article>
             </section>
 
