--- a/ui/index.html
+++ b/ui/index.html
@@ -32,7 +32,7 @@
             <section>
                 
                 <article>
-                    <h4>News</h4>
+                    <h4 class = 'news'>News</h4>
                 </article>
             </section>
 
