--- a/ui/index.html
+++ b/ui/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width">
         <link rel="shortcut icon" href="#">
         <link href="/ui/style.css" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         
@@ -25,7 +26,7 @@
         <div class="page-home">
             <section>
                 <h1 class="page-title">My App</h1>
-                <p></p>
+                <p>Learned with <i class = 'fa fa-heart heart'></i> from IMAD</p>
                 <a class="fork-tag" href="http://www.imad.tech/">IMAD</a>
             </section>
         
