[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -33,7 +33,7 @@
             <section>
                 
                 <article>
-                    <h4 class = 'news'>News</h4>
+                    <h4 class = 'news'><i class="fa fa-thumb-tack" aria-hidden="true"></i>News</h4>
                 </article>
             </section>
 
