--- a/ui/index.html
+++ b/ui/index.html
@@ -27,7 +27,7 @@
             <section>
                 <h1 class="page-title">My App</h1>
                 <p>Learned with <i class = 'fa fa-heart heart'></i> from IMAD</p>
-                <a class="fork-tag" href="http://www.imad.tech/">IMAD</a>
+                <a class="fork-tag" href="http://www.imad.tech/" target="_blank">IMAD</a>
             </section>
             
             <section>
