--- a/ui/index.html
+++ b/ui/index.html
@@ -52,6 +52,6 @@
         
         
    
-        <script type="text/javascript" src="../ui/main.js"></script>
+        <script type="text/javascript" src="ui/main.js"></script>
     </body>
 </html>
