--- a/ui/index.html
+++ b/ui/index.html
@@ -50,5 +50,6 @@
             </section>
         </div>
         
+        <script type="text/javascript" src="ui/main.js"></script>
     </body>
 </html>
