--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,21 @@
-<html>
+<!doctype html>
+<html lang="en">
+    <title>Article One</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
+        <link rel="shortcut icon" href="#">
+        <link href="/ui/style.css" rel="stylesheet" />
+    </head>
+    
+    <body>
+        <div class="page-home">
+            <section>    
+                <h1>Article one</h1>
+                <hr/>
+                <p>
+                    <strong>Lorem Ipsum</strong> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                </p>
+            </section>
+        </div>
+    </body>
 </html>
