--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <title>Article One</title>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width initial-scale = 1">
         <link rel="shortcut icon" href="#">
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
