[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -8,7 +8,7 @@
     </head>
     
     <body>
-        <div class="page-home">
+        <div class="">
             <section>    
                 <h1>Article one</h1>
                 <hr/>
