--- a/ui/index.html
+++ b/ui/index.html
@@ -25,7 +25,7 @@
         
         <div class="page-home">
             <section>
-                <h1 class="page-title">My App</h1>
+                <h1 class="page-title title-bg">My App</h1>
                 <p>Learned with <i class = 'fa fa-heart heart'></i> from IMAD</p>
                 <a class="fork-tag" href="http://www.imad.tech/" target="_blank">IMAD</a>
             </section>
