[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -24,8 +24,8 @@
         <!--</div>-->
         
         <div class="page-home">
-            <section>
-                <h1 class="page-title title-bg">My App</h1>
+            <section clas s= 'title-bg'>
+                <h1 class="page-title">My App</h1>
                 <p>Learned with <i class = 'fa fa-heart heart'></i> from IMAD</p>
                 <a class="fork-tag" href="http://www.imad.tech/" target="_blank">IMAD</a>
             </section>
