[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
+    <head>
     <title>Article Three</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width initial-scale = 1">
-        <link rel="shortcut icon" href="#">
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     
