--- a/ui/index.html
+++ b/ui/index.html
@@ -24,7 +24,7 @@
         
         <div class="page-home">
             <section class= 'title-bg'>
-                <h1 class="page-title">My App</h1>
+                <h1 class="page-title"><i class="fa fa-telegram" aria-hidden="true"></i> My App</h1>
                 <p>Learned with <i class = 'fa fa-heart heart'></i> from IMAD</p>
                 <a class="fork-tag" href="http://www.imad.tech/" target="_blank">IMAD</a>
             </section>
