[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -24,7 +24,8 @@
         
         <div class="page-home">
             <section class= 'title-bg'>
-                <h1 class="page-title"><i id = 'jet' class="fa fa-fighter-jet" aria-hidden="true"></i> My App</h1>
+                <h1><i id = 'jet' class="fa fa-fighter-jet" aria-hidden="true"></i></h1>
+                <h1 class="page-title"> My App</h1>
                 <p>Learned with <i class = 'fa fa-heart heart'></i> from IMAD</p>
                 <a class="fork-tag" href="http://www.imad.tech/" target="_blank">IMAD</a>
             </section>
