--- a/ui/index.html
+++ b/ui/index.html
@@ -34,11 +34,11 @@
                 <article>
                     <h4 class = 'login-container sec-heading'><i class="fa fa-sign-in" aria-hidden="true"></i> Login</h4>
                     <div class="input-group margin-bottom-sm">
-                      <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i></span>
+                      <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
                       <input class="form-control" type="text" placeholder="Email address">
                     </div>
                     <div class="input-group">
-                      <span class="input-group-addon"><i class="fa fa-key fa-fw" aria-hidden="true"></i></span>
+                      <span class="input-group-addon"><i class="fa fa-key fa-fw"></i></span>
                       <input class="form-control" type="password" placeholder="Password">
                     </div>
                 </article>
