[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -33,11 +33,11 @@
             <section>
                 <article>
                     <h4 class = 'login-container sec-heading'><i class="fa fa-sign-in" aria-hidden="true"></i> Login</h4>
-                    <div class="input-group margin-bottom-sm">
+                    <div class="">
                       <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
                       <input class="form-control" type="text" placeholder="Email address">
                     </div>
-                    <div class="input-group">
+                    <div class="">
                       <span class="input-group-addon"><i class="fa fa-key fa-fw"></i></span>
                       <input class="form-control" type="password" placeholder="Password">
                     </div>
