--- a/ui/index.html
+++ b/ui/index.html
@@ -28,7 +28,7 @@
                 <h1 class="page-title"> My App</h1>
                 <p>Learned with <i class = 'fa fa-heart heart'></i> from IMAD</p>
                 <a class="fork-tag" href="http://www.imad.tech/" target="_blank">IMAD</a>
-                <a href='#' class = 'button button-download'>Click Me</a>
+                <button type="button" class = 'button button-download'>Click Me</button>
             </section>
             
             <section>
