[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -28,7 +28,7 @@
                 <h1 class="page-title"> My App</h1>
                 <p>Learned with <i class = 'fa fa-heart heart'></i> from IMAD</p>
                 <a class="fork-tag" href="http://www.imad.tech/" target="_blank">IMAD</a>
-                <button type="button" id = 'countr-btn' class = 'button'>Click Me <span id = 'countr-badge' class="badge badge-notification clicks">0</span> </button>
+                <button type="button" id = 'countr-btn' class = 'button'>Click Me <span id = 'ctr-bdg' class="badge badge-notification clicks">0</span> </button>
             </section>
             
             <section>
