[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -34,13 +34,24 @@
             <section>
                 <article>
                     <h4 class = 'login-container sec-heading'><i class="fa fa-sign-in" aria-hidden="true"></i> Login</h4>
-                    <div class="input-group margin-bottom-sm">
-                      <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
-                      <input class="form-control" type="text" placeholder="Email address">
-                    </div>
-                    <div class="input-group">
-                      <span class="input-group-addon"><i class="fa fa-key fa-fw"></i></span>
-                      <input class="form-control" type="password" placeholder="Password">
+                    <div id="formWrapper">
+                      <div id="form">
+                          <div class="form-item">
+                            <p class="formLabel">Email</p>
+                            <input type="email" name="email" id="email" class="form-style" autocomplete="off"/>
+                          </div>
+                          <div class="form-item">
+                            <p class="formLabel">Password</p>
+                            <input type="password" name="password" id="password" class="form-style" />
+                            <!-- <div class="pw-view"><i class="fa fa-eye"></i></div> -->
+                            <p><a href="#" ><small>Forgot Password ?</small></a></p>	
+                          </div>
+                          <div class="form-item">
+                          <p class="pull-left"><a href="#"><small>Register</small></a></p>
+                          <input type="submit" class="login pull-right" value="Log In">
+                          <div class="clear-fix"></div>
+                          </div>
+                      </div>
                     </div>
                 </article>
             </section>
