--- a/ui/index.html
+++ b/ui/index.html
@@ -71,5 +71,6 @@
         </div>
         
         <script type="text/javascript" src="ui/main.js"></script>
+        <script src="https://code.jquery.com/jquery-2.1.0.min.js" ></script>
     </body>
 </html>
